--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
           />
         </mat-form-field>
       </div>
-      <div fxFlex="20">
+      <div fxFlex="20" fxLayoutGap="10px">
         <button
           mat-raised-button
           color="primary"
@@ -57,6 +57,13 @@
           (click)="testApi()"
         >
           Testuj
+        </button>
+        <button
+          mat-raised-button
+          color="accent"
+          (click)="openDialog()"
+        >
+          Autor
         </button>
       </div>
     </div>
@@ -69,17 +76,19 @@
       class="mg-10"
     >
       <mat-form-field appearance="outline" fxFlex="100">
-        <mat-label>Ścieżka</mat-label>
-        <input matInput placeholder="/facts" formControlName="path" required />
+        <mat-label>Body</mat-label>
+        <input matInput placeholder="{test: test}" required />
       </mat-form-field>
     </div>
   </form>
   <div class="mg-10">
-    Wygenerowany curl: <strong>{{ curlCommand }}</strong>
+    <span *ngIf="!curlCommand"><strong>Uzupełnij powyższe pola, aby wygenerować CURL!</strong></span>
+    <span *ngIf="curlCommand">Wygenerowany curl: </span>
+    <strong>{{ curlCommand }}</strong>
   </div>
   <mat-card
     *ngIf="subscribeState"
-    style="background-color: antiquewhite; margin-top: 25px"
+    style="background-color: #5cb85c; margin-top: 25px"
     class="mg-10"
   >
     <mat-card-header>
@@ -87,8 +96,8 @@
         >Wynik ostatniego testu
         <hr /></strong
     ></mat-card-header>
-    <mat-card-content>
-      <strong>{{ subscribeState }}</strong>
+    <mat-card-content style="white-space: pre-line">
+      <strong>{{ subscribeState | json }}</strong>
     </mat-card-content>
   </mat-card>
 </div>
