--- a/src/app/author/author.component.html
+++ b/src/app/author/author.component.html
@@ -5,3 +5,6 @@
     Nr albumu: <strong>07397</strong><br>
     Opis: <strong>Projekt testujący żądania API.</strong>
 </mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button mat-raised-button mat-dialog-close>Zamknij</button>
+</mat-dialog-actions>
